<resources>

    <!-- App title  -->
    <string name="app_name">Magnesia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to appbar menu & About-Info-->
    <string name="action_settings">Einstellungen</string>
    <string name="action_boulder_map">Boulderkarte</string>
    <string name="action_climb_map">Kletterkarte</string>
    <string name="title_activity_over">Über</string>
    <string name="title_activity_satellite_view">Satellitenansicht</string>
    <string name="add_favorits">zu Favoriten hinzufügen</string>
    <string name="text_app">"Informationen zur App"</string>
    <string name="appversionlabel">"App Version: "</string>
    <string name="text_contact">"Kontakt und Impressum"</string>
    <string name="development">Entwicklung: Hagen Tischer</string>
    <string name="design">Design: Timo Ott und Hagen Tischer</string>
    <string name="nav_drawer_map">Karte</string>
    <string name="nav_drawer_list_climb_boulder">Kletter- und Boulderspots</string>
    <string name="nav_drawer_list_climb">Kletterpots</string>
    <string name="nav_drawer_list_boulder">Boulderspots</string>
    <string name="nav_drawer_list_favs_spots">Favoritenliste</string>

    <!-- Strings related to appinformations -->
    <string name="text_over_main_1_1">
        <![CDATA[
Angaben
gem&auml;&szlig; &sect; 5 TMG
    ]]></string>

    <string name="text_over_main_1_2">
        <![CDATA[
Autor Hagen Tischer
    ]]></string>

    <string name="text_over_main_contact_mail">
        <![CDATA[
        E-Mail: <i>mapsapiunwetter@gmail.com</i>
    ]]></string>

    <string name="text_over_main_2">
        <![CDATA[
        <br/>
<b>Haftung f&uuml;r Inhalte</b><br/>
<br/>
Die
Inhalte unserer Seiten wurden mit gr&ouml;&szlig;ter Sorgfalt
erstellt. F&uuml;r die Richtigkeit, Vollst&auml;ndigkeit und
Aktualit&auml;t der Inhalte k&ouml;nnen wir jedoch keine Gew&auml;hr
&uuml;bernehmen. Als Diensteanbieter sind wir gem&auml;&szlig; &sect;
7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach den
allgemeinen Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG
sind wir als Diensteanbieter jedoch nicht verpflichtet, &uuml;bermittelte
oder gespeicherte fremde Informationen zu &uuml;berwachen oder nach
Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit
hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung
von Informationen nach den allgemeinen Gesetzen bleiben hiervon
unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab
dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich.
Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir
diese Inhalte umgehend entfernen.<br/>
<br/><b>
Haftung f&uuml;r
Links</b><br/>
<br/>
Unser Angebot enth&auml;lt Links zu externen
Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben.
Deshalb k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine
Gew&auml;hr &uuml;bernehmen. F&uuml;r die Inhalte der verlinkten
Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten
verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der
Verlinkung auf m&ouml;gliche Rechtsverst&ouml;&szlig;e &uuml;berpr&uuml;ft.
Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht
erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten
Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung
nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir
derartige Links umgehend entfernen.<br/>
<br/><b>
Hinweis</b><br/><br/>
Da
inhaltliche und sachliche Fehler&nbsp; nicht ausgeschlossen werden
k&ouml;nnen, erkl&auml;ren die Herausgeber hiermit, dass alle Angaben
im Sinne der Produkthaftung ohne Garantie erfolgen und keine Haftung
f&uuml;r jedwede Angaben &uuml;bernommen werden kann.<br/>

]]></string>
    <string name="made_text_start">"Made with"</string>
    <string name="made_text_end"> in Berlin!</string>

    <!-- Access token for MapBox -->
    <string name="accessToken" translatable="false">pk.eyJ1IjoiYW5kcm9pZHBpdGkiLCJhIjoiY2lvd3VwamhmMDA4MHZ0a2p0OGJnYnRhNSJ9.fITbznDvS6FhARaYxrW_Pw</string>

    <!-- Strings related Dialog -->
    <string name="dialog_exit_title">App schließen</string>
    <string name="dialog_exit_question">Willst du Magnesia verlassen?</string>
    <string name="button_exit_yes">Ja</string>
    <string name="button_exit_no">Nein</string>
    <string name="dialog_location_settings">Einstellungen</string>
    <string name="locationCancel">Abbrechen</string>
    <string name="dialog_location_title">Standortbestimmung</string>
    <string name="dialog_location_question">Die Standortbestimmung ist nicht aktiviert. Wollen Sie diese aktivieren?</string>

    <!-- Strings related to Listview -->
    <string name="typ">Art: </string>
    <string name="inoutdoor">In- oder Outdoor: </string>
    <string name="brouten">Anzahl der Boulderrouten: </string>
    <string name="krouten">"Anzahl der Kletterrouten: </string>
    <string name="material">Material: </string>
    <string name="opening">Öffnungszeiten: </string>
    <string name="price">Preis: </string>
    <string name="adress">Adresse: </string>
    <string name="web">Web: </string>
    <string name="routing_button">Bring mich dort hin!</string>
    <string name="favorites_no_contant">Du hast noch nichts gelikt!</string>
    <string name="favorites_no_contant_small">Likes kannst du in der Einzelansicht vergeben.</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Einstellungen</string>
    <string name="pref_map_tilt">Kartenneigung</string>
    <string name="pref_map_tilt_summery">Neigungsfunktion der Basiskarte aktivieren.</string>
    <string name="pref_map_tilt_summeryon">Neigungsfunktion aktiviert.</string>
    <string name="pref_map_tilt_summeryoff">Neigungsfunktion deaktiviert.</string>
    <string name="pref_map_rotation">Kartenrotation</string>
    <string name="pref_map_rotation_summeryon">Rotationsfunktion aktiviert.</string>
    <string name="pref_map_rotation_summeryoff">Rotationsfunktion deaktiviert.</string>
    <string name="pref_header_mapsettings">Basiskarte</string>
    <string name="pref_header_filtersettings">Filter-Buttons</string>
    <string name="pref_filter_auto_close">Filter-Menu</string>
    <string name="pref_filter_auto_close_summeryon">Filter-Menus werden automatisch geschlossen</string>
    <string name="pref_filter_auto_close_summeryoff">Filter-Menus werden nicht automatisch geschlossen</string>
    <string name="pref_filter_labels">Filter-Button-Labels</string>
    <string name="pref_labels_summeryon">Filter-Button-Labels werden ausgeblendet</string>
    <string name="pref_labels_summeryoff">Filter-Button-Labels werden nicht ausgeblendet</string>
    <string name="pref_map_locationrequest">Standortabfrage</string>
    <string name="pref_map_locationrequest_summeryon">Standortabfrage aktiviert</string>
    <string name="pref_map_locationrequest_summeryoff">Standortabfrage deaktiviert</string>
    <string name="title_activity_map">Map</string>

    <!-- Strings related to Map-Flip  -->
    <string name="map_boulder">Boulderspots</string>
    <string name="map_climb">Kletterspots</string>

    <!-- Strings related to favorite spots button  -->
    <string name="spot_added">Zu Favoriten hinzugefügt</string>
    <string name="spot_deleted">Aus Favoriten entfernt</string>
    <string name="favorite_yes">Bereits ein Lieblingsspot</string>
    <string name="favorite_no">Kein Lieblingsspot</string>

    <!-- Strings related to ShowCaseViews  -->
    <string name="map_flip_show_case">Hier kannst du zwischen der Anicht für Boulder-
        oder Kletterspots wechseln.</string>
    <string name="filter_button_show_case">Der Filterbutton ermöglicht das filtern der Spots nach In- und Outdoor.</string>
    <string name="title_activity_about_libraries">AboutLibraries</string>

</resources>
