<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OverActivity"
    tools:showIn="@layout/activity_over">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/texttitelApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/text_app"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/textappversionlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/texttitelApp"
            android:layout_marginTop="5dp"
            android:text="@string/appversionlabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/textappversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_below="@+id/texttitelApp"
            android:layout_toRightOf="@+id/textappversionlabel"
            android:layout_margin="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/textdevelopemt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textappversionlabel"
            android:layout_marginTop="5dp"
            android:text="@string/development"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/textdesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textdevelopemt"
            android:layout_marginTop="5dp"
            android:text="@string/design"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <View
            android:id="@+id/horizontalline"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/textdesign"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/texttitelContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_contact"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/horizontalline"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textover_main_1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/texttitelContact"
            android:text="@string/text_over_main_1_1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textover_main_1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textover_main_1_1"
            android:text="@string/text_over_main_1_2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/contact_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_below="@+id/textover_main_1_2"
            android:layout_marginTop="5dp"
            android:onClick="sendMail"
            android:text="@string/text_over_main_contact_mail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textover_main_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_below="@+id/contact_mail"
            android:text="@string/text_over_main_2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textberlinLove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textover_main_2"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/imageheart"
            android:text="@string/made_text_start"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageheart"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/textover_main_2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:src="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/textberlinLove2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textover_main_2"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/imageheart"
            android:text="@string/made_text_end"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
</ScrollView>